v0.1:
	- Initial release
v0.2:
	- Fixed players entering regex fields in chat crashing {msg}.
	- changed PLAYER_CHAT event to run earlier so we triger before other chat plugins.
	  If players are using chat modes we need to run first to cancel the chat event for other plugins.
v0.3:
	- TownyChat now only enables itself if Towny successfully starts.
	- Fixed missing {} around modplayername.
v0.4:
	- Fixed custom channel chat not showing in the console.
v0.5:
	- Added auto modes for chat.
	  Type '/tc' to set town chat mode. All text typed from then on will be sent to town chat.
	  While in a chat mode you can still talk in other channels by using the channel commands eg. '/nc hi'.
	  While in a chat mode you can talk in global chat with '/g text here'.
	  to clear all chat modes '/g'.
	- Added a new permission node for global chat ('/g') of 'towny.chat.global'.
	- Added {worldname} as an accepted entry.
	- Fixed '/g' mode to add formatting.
v0.6:
	- Changed global chat to pass through bukkits chat process instead of our own (allows other plugins to see it again).
v0.7:
	- Added support for Essentials mute and ignore features. Players on ignore will still be seen in town and nation chat.
	- Added craftIRC 3.1 support
	
	  Add a channel tag of 'admin' to the
	  receiving channel in the craftIRC config.
	  
	  Disable Auto paths and add the following to the 'paths:' section

	    - source: 'minecraft'
	      target: 'admin'
	      formatting:
	        chat: '%message%'
	        
	    - source: 'admin'     # These are endpoint tags
	      target: 'minecraft'    #
	      formatting:
	        chat: '%foreground%[%red%%ircPrefix%%sender%%foreground%] %message%'
v0.8:
	- Fixed {townformatted} and {nationformatted} to display correctly.
	